--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.cover-container d-flex w-100 h-100 p-3 mx-auto flex-column {
+.cover-container {
     position: relative;
     text-align: center;
     color: white;
