--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.cover-container d-flex w-100 h-100 p-3 mx-auto flex-column {
-    position: relative;
-    text-align: center;
-    color: white;
+div.TableauPlaceholder-fluid {
+  width: 950px;
+  margin-left: auto ;
+  margin-right: auto ;
   }
