changed main image and added image to 'team' section

--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ div.TableauPlaceholder-fluid {
   margin-right: auto ;
   }
 
+  .card-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
